text align instagram fix test

--- a/style.css
+++ b/style.css
@@ -555,6 +555,7 @@ a:hover {
 		width: 60%;
 		mix-blend-mode: difference;
 		text-align-last: left;
+		text-align: left;
 		/*margin: 0 1px;*/
 	}
 
@@ -601,6 +602,12 @@ a:hover {
 
 	.header p {
 		text-align-last: left;
+		text-align: left;
+	}
+
+	#secret {
+		text-align-last: left;
+		text-align: left;
 	}
 }
 
